--- a/servletbridge-felix-parent/asm-wrapper/pom.xml
+++ b/servletbridge-felix-parent/asm-wrapper/pom.xml
@@ -10,6 +10,10 @@
 	<packaging>bundle</packaging>
 	<version>3.3.1</version>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>asm</groupId>
@@ -41,7 +45,8 @@
 				<configuration>
 					<instructions>
 						<Bundle-Version>3.3.1</Bundle-Version>
-						<Export-Package>*;version="3.3.1"</Export-Package>
+						<Export-Package>org.objectweb.asm.*;version="3.3.1"</Export-Package>
+						<Embed-Dependency>*</Embed-Dependency>
 					</instructions>
 				</configuration>
 			</plugin>
