--- a/servletbridge-felix-parent/servletbridge-felix/src/main/webapp/WEB-INF/framework.properties
+++ b/servletbridge-felix-parent/servletbridge-felix/src/main/webapp/WEB-INF/framework.properties
@@ -5,9 +5,6 @@ org.osgi.framework.system.packages = \
  org.osgi.framework.startlevel; version=1.0, \
  org.osgi.framework.wiring; version=1.1, \
  org.osgi.resource; version=1.0, \
- org.osgi.service.cm; version=1.4, \
- org.osgi.service.event; version=1.3, \
- org.osgi.service.log; version=1.3, \
  org.osgi.service.packageadmin; version=1.2, \
  org.osgi.service.startlevel; version=1.1, \
  org.osgi.service.url; version=1.0, \
@@ -141,3 +138,7 @@ org.osgi.framework.system.packages = \
  javax.servlet.jsp, \
  javax.servlet.jsp.el
  
+ #exported from osgi.cmpn bundle
+ #org.osgi.service.cm; version=1.4, \
+ #org.osgi.service.event; version=1.3, \
+ #org.osgi.service.log; version=1.3, \
